--- a/views/sign-up-form.pug
+++ b/views/sign-up-form.pug
@@ -2,15 +2,16 @@ extends layout
 
 block content 
 
-    h1 Sign up 
-    label(for="first-name") First name
-    input#first-name(type="text" name="first-name" required)
-    label(for="last-name") Last name
-    input#last-name(type="text" name="last-name" required)
-    label(for="email") Email
-    input#email(type="email" name="email" required)
-    label(for="password") Password
-    input#password(type="password" name="password" required)
-    label(for="confirm-password") Confirm Password
-    input#confirm-password(type="password" name="confirm-password" required)  
-    button(type="submit") Submit  
+    h1 Sign up
+    form(action='' method='POST')
+        label(for="first-name") First name
+        input#first_name(type="text" name="first_name" required)
+        label(for="last-name") Last name
+        input#last_name(type="text" name="last_name" required)
+        label(for="email") Email
+        input#email(type="email" name="email" required)
+        label(for="password") Password
+        input#password(type="password" name="password" required)
+        label(for="confirm_password") Confirm Password
+        input#confirm_password(type="password" name="confirm_password" required)  
+        button(type="submit") Submit  
