--- a/views/sign-up-form.pug
+++ b/views/sign-up-form.pug
@@ -8,8 +8,8 @@ block content
         input#first_name(type="text" name="first_name" required)
         label(for="last-name") Last name
         input#last_name(type="text" name="last_name" required)
-        label(for="email") Email
-        input#email(type="email" name="email" required)
+        label(for="username") Username
+        input#username(type="text" name="username" required)
         label(for="password") Password
         input#password(type="password" name="password" required)
         label(for="confirm_password") Confirm Password
