It doesnt update the membership status of the user when the passcode is corrert for some reason.

--- a/views/become-member-form.pug
+++ b/views/become-member-form.pug
@@ -4,8 +4,9 @@ block content
 
     h1 Become a member 
     p Enter the correct passcode to gain member status 
-    p Who is the rector's name of the Alcoholics University of Lisika?
+    p What is my favorite music genre?
     form(action="" method='POST') 
         label(for="passcode") Passcode 
         input#passcode(type="text" name="passcode")
         button(type="submit") Submit 
+
