--- a/views/index.pug
+++ b/views/index.pug
@@ -17,6 +17,14 @@ block content
 
   h5 Only members can see the author and date
 
-  if user 
-    h1 Test
+  if user
+    ul 
+      a(href="/new-message") 
+        li New Message
+      a(href="/become-member") 
+        li Become Member
+      a(href="/admin-mode")
+        li Admin Mode 
+      a(href="/log-out")
+        li Log Out  
 
