--- a/views/new-message-form.pug
+++ b/views/new-message-form.pug
@@ -10,10 +10,10 @@ block content
 
     form(action="" method='POST')
         label(for="title") Title 
-        input#title(type="text" name="title")
+        input#title(type="text" name="title" required)
         label(for="content") Content 
-        input#content(type="text" name="content")
-    button(type="submit") Submit  
+        input#content(type="text" name="content" required)
+        button(type="submit") Submit  
 
 
 
