--- a/views/index.pug
+++ b/views/index.pug
@@ -34,5 +34,7 @@ block content
             each mess in message 
                 li 
                     p #{mess.title} 
+                    p #{mess.content}
+                    p #{mess.timestamp}
 
 
