--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,5 +6,30 @@ html
     meta(name='viewport' content='width=device-width, initial-scale=1')
     link(rel='stylesheet' href='/stylesheets/style.css')
   body
-    div(class='container')
-    block content
+  div(class='main-container')
+
+    h1 Members only club 
+    if user
+      nav(class='navbar')
+        ul
+        img(src="./public/message.svg" class='navbar-svg' alt="")
+        a(href="/new-message") 
+          li New Message
+        img(src="./public/star.svg" class='navbar-svg' alt="")
+        a(href="/become-member") 
+          li Become Member
+        img(src="./public/padlock.svg" class='navbar-svg' alt="")
+        a(href="/become-admin")
+          li Admin Mode
+        img(src="./public/log-out.svg" class='navbar-svg' alt="")
+        a(href="/log-out")
+          li Log Out
+    else
+      nav(class='navbar')
+        img(src="./public/person.svg" class='navbar-svg' alt="")
+        a(href="/sign-up")
+          li Sign Up
+        img(src="./public/log-in.svg" class='navbar-svg' alt="")
+        a(href="/log-in")
+          li Log In 
+  block content
