--- a/views/log-in-form.pug
+++ b/views/log-in-form.pug
@@ -2,18 +2,12 @@ extends layout
 
 block content 
 
-    h1 Members only club 
-
-    ul 
-        a(href="/sign-up") 
-            li Sign Up
-        a(href="/log-in") 
-            li Log In
-
-    h1 Log In 
-    form(action="/log-in" method='POST')
-        label(for="username") Username 
-        input#username(type="text" name="username")
-        label(for="password") Password 
-        input#password(type="password" name="password") 
-        button Log In 
+    h1 Log In
+    div(class='form-container')
+        form(action="/log-in" method='POST')
+            label(for="username") Username 
+            input#username(type="text" name="username")
+            label(for="password") Password 
+            input#password(type="password" name="password")
+            div(class='log-in-btn-container') 
+                button(class='log-in-btn') Log In 
