--- a/views/sign-up-form.pug
+++ b/views/sign-up-form.pug
@@ -1,17 +1,22 @@
 extends layout 
 
 block content 
-
-    h1 Sign up
-    form(action='' method='POST')
-        label(for="first-name") First name
-        input#first_name(type="text" name="first_name" required)
-        label(for="last-name") Last name
-        input#last_name(type="text" name="last_name" required)
-        label(for="username") Username
-        input#username(type="text" name="username" required)
-        label(for="password") Password
-        input#password(type="password" name="password" required)
-        label(for="confirm_password") Confirm Password
-        input#confirm_password(type="password" name="confirm_password" required)  
-        button(type="submit") Submit  
+    div(class='form-container')
+        h1 Sign up
+        form(action='' class='form' method='POST')
+        div(class='form-content')
+            label(for="first-name") First name
+            input#first_name(type="text" name="first_name" required)
+        div(class='form-content')
+            label(for="last-name") Last name
+            input#last_name(type="text" name="last_name" required)
+        div(class='form-content') 
+            label(for="username") Username
+            input#username(type="text" name="username" required)
+        div(class='form-content')
+            label(for="password") Password
+            input#password(type="password" name="password" required)
+        div(class='form-content')
+            label(for="confirm_password") Confirm Password
+            input#confirm_password(type="password" name="confirm_password" required)
+            button(type="submit" class='submit-btn') Submit  
