--- a/views/index.pug
+++ b/views/index.pug
@@ -3,13 +3,17 @@ extends layout
 block content
 
   div(class='main-content-container')
-    h2 Special club for members only 
+    h2 Special club for
+      span#header  members only
 
-    h3 Everybody can send messages 
+    h3 Everybody can send
+      span#subheader  messages 
 
-    h4 Non-members can only see title and contents 
+    h4 Non-members can only see
+      span#header  title and contents 
 
-    h5 Only members can see the author and date
+    h5 Only members can see the 
+      span#header  author and date
 
     if messages.length 
     if user && user.membership_status
@@ -19,7 +23,7 @@ block content
             p Title: #{message.title}
             p Content: #{message.content}
             p Date: #{message.timestamp}
-            p User: #{message.user.first_name} #{message.user.last_name}
+            p User Name: #{message.user.first_name} #{message.user.last_name}
     else if user && user.admin
       div(class='message-container') 
         each message in messages
@@ -29,8 +33,8 @@ block content
               p Title: #{message.title}
               p Content: #{message.content}
               p Date: #{message.timestamp}
-              p User: #{message.user.first_name} #{message.user.last_name}
-              button(type="submit" class='delete-msg-button') Delete
+              p User Name: #{message.user.first_name} #{message.user.last_name}
+              button(type="submit" class='delete-msg-button') Delete Message
     else
       div(class='message-container') 
         each message in messages
