The problem with the user not being logged has been fixed the middleware that allows to be log in has been moven before the route and applied security measures

--- a/views/new-message-form.pug
+++ b/views/new-message-form.pug
@@ -10,7 +10,7 @@ block content
             span#subheader  Message 
 
         p#para Hello, 
-            span#subheader #{currentUser.username}
+            span#subheader #{user.username}
 
         p#para What's on
             span#subheader  your mind?
